2006-12-18  Øystein Gisnås  <oystein@gisnas.net>

	* Fixed a few reference counting problems 
	
2006-12-16  Philip Van Hoof <pvanhoof@gnome.org>

	* Fixes and simplification of API for RFC822 support

2006-12-16  Øystein Gisnås  <oystein@gisnas.net>

	* libtinymail-test/: Some unit test improvements and added two new
	unit tests
	* Documentation fixes in TnyList

2006-12-15  Philip Van Hoof <pvanhoof@gnome.org>

	* libtinymail-camel/camel-lite/camel: merging interesting bits and
	pieces with upstream Camel

2006-12-14  Sergio Villar Senin <svillar@igalia.com>

	* libtinymail-camel/tny-camel-store-account.c:
	* libtinymail-camel/tny-camel-folder.c: replaced some double pointers
	by simple pointers. Fixed some uninitialized GError's

2006-12-11  Sergio Villar Senin <svillar@igalia.com>

	* libtinymail/tny-folder.h: added the tny_folder_get_msg_async
	signature to the list of public methods

2006-12-10  Philip Van Hoof <pvanhoof@gnome.org>

	* Committed unfinished copy/moving of folders

	* This was a major API change in libtinymail

2006-12-08  Øystein Gisnås  <oystein@gisnas.net>

	* Ported GUnit unit tests to Check

2006-12-08  Philip Van Hoof <pvanhoof@gnome.org>

	* Added the tny_folder_transfer_msgs_async API
	* Implemented for libtinymail-camel
	* Fixed some progress/status numbers and changed its API

	*  This was a major API change

2006-12-07  Sergio Villar Senin <svillar@igalia.com>

	* libtinymail-camel/tny-camel-header.c: Added a default camel
	implementation for tny_header_set/get_replyto

2006-12-06  Philip Van Hoof <pvanhoof@gnome.org>

	* Added the tny_folder_get_msg_async API
	* Implemented tny_camel_folder_get_msg_async

	* This was a major API change in libtinymail

2006-12-01  Philip Van Hoof <pvanhoof@gnome.org>

	* Support for content-objects in RFC822 messages

	* This was a major API change

2006-11-30  Sergio Villar Senin <svillar@igalia.com>
	* libtinymail-camel/tny-camel-common.c: a store query with no items
	filters nothing
